landing loading anim

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main id="mainContent">
       <section class="loading-background">
-        <video src="/landing/bg-video.mp4" autoplay muted loop></video>
+        <video class="bg-video" src="/landing/bg-video.mp4" autoplay muted loop></video>
         <div class="video-overlay"></div>
     </section>
 
