--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -87,23 +87,7 @@
               <p>Mūsų grupės įmonės</p>
               <div class="swiper">
                 <!-- Additional required wrapper -->
-                <div class="swiper-wrapper">
-                  <!-- Slides -->
-                  <!-- <div class="swiper-slide">
-                    <img src="/svg/bbc.svg" alt="bbc">
-                    <img src="/svg/unilven.svg" alt="unilven">
-                    <img src="/svg/unilven.svg" alt="unilven">
-                    <img src="/svg/deloitee.svg" alt="deloitee">
-                  </div>
-            
-                  <div class="swiper-slide">
-                    <img src="/svg/bbc.svg" alt="bbc">
-                    <img src="/svg/unilven.svg" alt="unilven">
-                    <img src="/svg/unilven.svg" alt="unilven">
-                    <img src="/svg/deloitee.svg" alt="deloitee">
-                  </div> -->
-                 
-                </div>
+                <div class="swiper-wrapper"></div>
               </div>
             </div>
         </section>
