--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/src/styles/header.scss">
     <link rel="stylesheet" href="/src/styles/landing.scss">
     <link rel="stylesheet" href="/src/styles/tabs.scss">
+    <script src="/src/scripts/landing.js" type="module"></script>
   </head>
   <body>
   <body>
