--- a/src/pages/tvarumas.html
+++ b/src/pages/tvarumas.html
@@ -297,13 +297,19 @@
 
       // Landing
       document.addEventListener("DOMContentLoaded", function() {
+        gsap.from('.section-1', {
+              duration: 1,
+              ease: "power3.inOut",
+              scale: 1.1
+            }, "<");  
+
           gsap.from('.section-1 .content', {
               x: -300,
               opacity: 0,
               duration: 1,
               ease: "power3.inOut",
               clipPath: "inset(0 0 0 100%)"
-            }, "<");  
+            }, "0.5");  
             
       });
     </script>
