--- a/src/pages/veiklos-kryptys.html
+++ b/src/pages/veiklos-kryptys.html
@@ -161,6 +161,13 @@
 
       // Landing
       document.addEventListener("DOMContentLoaded", function() {
+        gsap.from('.section-1', {
+              x: -300,
+              duration: 1,
+              ease: "power3.inOut",
+              clipPath: "inset(0 0 0 100%)"
+            }, "0.5");  
+
           gsap.from('.section-1 .content', {
               x: -500,
               opacity: 0,
@@ -168,8 +175,7 @@
               ease: "power3.inOut",
               clipPath: "inset(0 0 0 100%)",
               stagger: 0.5
-            }, "<");  
-            
+            }, "0.9");     
       });
     </script>
     </body>
