blend mode header

--- a/src/pages/pagrindines-veiklos.html
+++ b/src/pages/pagrindines-veiklos.html
@@ -88,7 +88,7 @@
 
         <section class="section-2">
             <div class="shape-3">
-                <img src="/images/activities-2.jpg" alt="">
+                <!-- <img src="/images/activities-2.jpg" alt=""> -->
             </div>
             
 
