--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -274,8 +274,10 @@
   </body>
 </html>
 <script type="module" src="/src/scripts/navigation.js"></script>
-<script type="module" src="/src/scripts/swiper.js"></script>
-<script type="module" src="/src/scripts/tabs.js"></script>
+<script type="module" src="/src/scripts/landing-swiper.js"></script>
+<script type="module" src="/src/scripts/landing-tabs.js"></script>
+
+<!-- Landing loading animation -->
 <script type="module">
     import gsap from "gsap";
     import ScrollTrigger from "gsap/ScrollTrigger";
