--- a/src/pages/veiklos-kryptys.html
+++ b/src/pages/veiklos-kryptys.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/src/styles/global.scss">
     <link rel="stylesheet" href="/src/styles/header.scss">
     <link rel="stylesheet" href="/src/styles/veiklos-kryptys.scss">
+    <link rel="stylesheet" href="/src/styles/footer.scss">
   </head>
   <body>
   <body>
