--- a/src/pages/apie-mus.html
+++ b/src/pages/apie-mus.html
@@ -92,7 +92,154 @@
             <div class="dates-content"></div> <!-- Container for content -->
         </section>
         
+        <section class="values">
+          <div class="foto-1">
+            <img src="/apie-mus/foto-1.jpg" alt="">
+          </div>
+          <div class="content">
+            <h2>Vertybės</h2>
+            <div class="icons">
+              <div class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" viewBox="0 0 63 63" fill="none">
+                  <g clip-path="url(#clip0_357_881)">
+                  <path d="M59.1866 28.2029H52.2205V21.6147C52.2205 20.6774 51.4631 19.9142 50.5256 19.9142H45.6301C44.6925 19.9142 43.929 20.6774 43.929 21.6147V28.2029H36.9721C33.6311 28.2029 32.2202 25.4461 33.793 22.1611C42.6616 3.60855 45.0284 1.93301e-06 48.0793 1.93301e-06C51.1211 -0.00305098 53.4971 3.60855 62.3566 22.1611C63.9324 25.4491 62.5215 28.2029 59.1866 28.2029Z" fill="#004A4E"/>
+                  <path d="M52.2196 28.2027V36.9005C52.2196 51.4263 40.2878 63.2197 25.7021 62.9968C11.376 62.777 0 50.8249 0 36.5036V21.6145C0 20.6773 0.75738 19.9141 1.69494 19.9141H6.59043C7.528 19.9141 8.29148 20.6773 8.29148 21.6145V36.583C8.29148 46.5508 16.4516 54.8791 26.4198 54.7112C36.1038 54.5464 43.9281 46.621 43.9281 36.9035V28.2058H52.2196V28.2027Z" fill="#004A4E"/>
+                  </g>
+                  <defs>
+                  <clipPath id="clip0_357_881">
+                  <rect width="63" height="63" fill="white"/>
+                  </clipPath>
+                  </defs>
+                </svg>
+                <p>Informacijos punktas</p>
+              </div>
+              <div class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="63" viewBox="0 0 64 63" fill="none">
+                  <g clip-path="url(#clip0_357_886)">
+                    <path d="M9.00325 26.9996C8.299 27.6865 8.299 28.8071 9.00325 29.5001L21.4099 41.2947C23.4823 43.3312 26.1969 44.3479 28.9146 44.3479C31.6324 44.3479 34.3532 43.3281 36.4194 41.2947L50.9078 27.0362V31.732C50.9078 44.6502 41.5881 56.0295 27.5372 62.5451C26.2186 63.1557 24.6829 63.1557 23.3644 62.5451C9.3228 56.0295 0 44.6502 0 31.732V3.25472C0 1.45944 1.48296 0 3.30719 0H47.6037C49.431 0 50.9109 1.45944 50.9109 3.25472V15.3149L30.469 35.4325C29.6127 36.2752 28.2228 36.2752 27.3727 35.4325L14.963 23.6319C14.2588 22.9449 13.1264 22.9449 12.4221 23.6319L9.00635 26.9965L9.00325 26.9996Z" fill="#004A4E"/>
+                    <path d="M63.4761 14.6678L50.9082 27.0364V15.3151L57.5195 8.80869C58.2175 8.12171 59.3561 8.12171 60.0604 8.80869L63.4761 12.1703C64.1742 12.8634 64.1742 13.9808 63.4761 14.6709V14.6678Z" fill="#004A4E"/>
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_357_886">
+                      <rect width="64" height="63" fill="white"/>
+                    </clipPath>
+                  </defs>
+                </svg>
+                  <p>Informacijos punktas</p>
+              </div>
+              <div class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="63" height="62" viewBox="0 0 63 62" fill="none">
+                  <g clip-path="url(#clip0_357_891)">
+                    <path d="M58.0424 24.4302H49.9855V31.0904C49.9855 31.9237 49.3009 32.5976 48.4543 32.5976H43.2185C42.3719 32.5976 41.6872 31.9237 41.6872 31.0904V24.4302H4.9576C2.219 24.4302 0 26.4457 0 28.9245V57.5119C0 59.9877 2.219 62.0002 4.9576 62.0002H58.0424C60.781 62.0002 63 59.9877 63 57.5089V28.9215C63 26.4427 60.781 24.4302 58.0424 24.4302ZM26.3651 56.098C25.277 56.098 24.4548 55.1233 24.6535 54.0704C24.9225 52.6295 25.1853 51.2968 25.4451 50.0665C26.0992 46.9259 26.7319 44.4501 27.4257 42.597C27.658 41.9803 27.8995 41.4298 28.147 40.9485C28.1257 40.9364 28.1043 40.9184 28.0859 40.9033C26.9336 39.9648 26.2948 38.4456 26.2948 36.4812C26.2948 33.0428 28.2601 30.9641 31.5031 30.9641C34.746 30.9641 36.7113 33.0428 36.7113 36.4812C36.7113 38.4456 36.0725 39.9648 34.9232 40.9033C34.9019 40.9184 34.8805 40.9364 34.8621 40.9485C35.8524 42.8707 36.6929 45.876 37.5671 50.0665C37.8238 51.2968 38.0836 52.6295 38.3557 54.0704C38.5543 55.1233 37.7321 56.098 36.644 56.098H26.3712H26.3651Z" fill="#004A4E"/>
+                    <path d="M49.9855 18.5129V24.4301H41.6872V18.4196C41.6872 12.7791 37.0567 8.07725 31.3258 8.17051C26.2581 8.25775 22.0799 12 21.4106 16.8313C21.3036 17.6074 20.6342 18.191 19.8334 18.191H14.451C13.6594 18.191 13.0144 17.5322 13.0786 16.7591C13.8122 7.49666 21.6245 0.16556 31.1821 0.000106241C41.5222 -0.171364 49.9855 8.33596 49.9855 18.5129Z" fill="#004A4E"/>
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_357_891">
+                      <rect width="63" height="62" fill="white"/>
+                    </clipPath>
+                  </defs>
+                </svg>
+                  <p>Informacijos punktas</p>
+              </div>
+          </div>
+          </div>
+        </section>
+
+        <section class="values-2">
+            <div class="shape-4"></div>
+            <div class="content">
+              <h2>„ACME Grupės“ socialinės atsakomybės ašis – paremta darbuotojų įtraukimu į socialinę atsakomybę.</h2>
+              <div class="numbers">
+                <div class="number">
+                  <div class="digit">30</div>
+                  <p>Informacijos punktas</p>
+                </div>
+
+                <div class="number">
+                  <div class="digit">2.8m</div>
+                  <p>Informacijos punktas</p>
+                </div>
+
+                <div class="number">
+                  <div class="digit">289</div>
+                  <p>Informacijos punktas</p>
+                </div>
+
+                <div class="number">
+                  <div class="digit">8</div>
+                  <p>Informacijos punktas</p>
+                </div>
+              </div>
+            </div>
+        </section>
         
+        <section class="managament">
+          <h3>Vadyba</h3>
+          <div class="managers">
+            <div class="manager">
+              <img src="/apie-mus/foto-2.jpg" alt="">
+              <div class="name">Vardas Pavardė</div>
+              <div class="ocupation">Ocupation</div>
+            </div>
+            <div class="manager">
+              <img src="/apie-mus/foto-2.jpg" alt="">
+              <div class="name">Vardas Pavardė</div>
+              <div class="ocupation">Ocupation</div>
+            </div>
+            <div class="manager">
+              <img src="/apie-mus/foto-2.jpg" alt="">
+              <div class="name">Vardas Pavardė</div>
+              <div class="ocupation">Ocupation</div>
+            </div>
+            <div class="manager">
+              <img src="/apie-mus/foto-2.jpg" alt="">
+              <div class="name">Vardas Pavardė</div>
+              <div class="ocupation">Ocupation</div>
+            </div>
+            <div class="manager">
+              <img src="/apie-mus/foto-2.jpg" alt="">
+              <div class="name">Vardas Pavardė</div>
+              <div class="ocupation">Ocupation</div>
+            </div>
+            <div class="manager">
+              <img src="/apie-mus/foto-2.jpg" alt="">
+              <div class="name">Vardas Pavardė</div>
+              <div class="ocupation">Ocupation</div>
+            </div>
+            <div class="manager">
+              <img src="/apie-mus/foto-2.jpg" alt="">
+              <div class="name">Vardas Pavardė</div>
+              <div class="ocupation">Ocupation</div>
+            </div>
+            <div class="manager">
+              <img src="/apie-mus/foto-2.jpg" alt="">
+              <div class="name">Vardas Pavardė</div>
+              <div class="ocupation">Ocupation</div>
+            </div>
+            <div class="manager">
+              <img src="/apie-mus/foto-2.jpg" alt="">
+              <div class="name">Vardas Pavardė</div>
+              <div class="ocupation">Ocupation</div>
+            </div>
+            <div class="manager">
+              <img src="/apie-mus/foto-2.jpg" alt="">
+              <div class="name">Vardas Pavardė</div>
+              <div class="ocupation">Ocupation</div>
+            </div>
+          </div>
+        </section>
+
+        <section class="managament">
+          <h3>Vadyba</h3>
+          <div class="managers">
+            <div class="manager">
+              <img src="/apie-mus/foto-2.jpg" alt="">
+              <div class="name">Vardas Pavardė</div>
+              <div class="ocupation">Ocupation</div>
+            </div>
+          </div>
+        </section>
+
         <footer>
             <svg class="footer-forma" width="1625" height="570" viewBox="0 0 1625 570" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M1624.08 372.518C1639.32 161.298 1463.61 -14.3191 1252.29 0.923077C834.712 31.0255 417.134 61.1379 -0.433437 91.2403L-32 601H1607.58C1613.07 524.839 1618.58 448.678 1624.07 372.518H1624.08Z" fill="#004A4E"/>
