animation and scroll fix

--- a/src/pages/pagrindines-veiklos.html
+++ b/src/pages/pagrindines-veiklos.html
@@ -183,23 +183,39 @@
       gsap.registerPlugin(ScrollTrigger);
 
       // Landing
-      document.addEventListener("DOMContentLoaded", function() {
-        gsap.from('.section-1', {
-              x: -300,
-              duration: 1,
-              ease: "power3.inOut",
-              clipPath: "inset(0 0 0 100%)"
-            }, "0.5");  
+      //   Scroll to top after refresh
+    window.onbeforeunload = function () {
+      window.scrollTo(0, 0);
+    }
 
-          gsap.from('.section-1 .content', {
-              x: -500,
-              opacity: 0,
-              duration: 1,
-              ease: "power3.inOut",
-              clipPath: "inset(0 0 0 100%)",
-              stagger: 0.5
-            }, "0.9");     
+      document.body.style.overflow = 'hidden';
+
+      document.addEventListener("DOMContentLoaded", function() {
+        const tl = gsap.timeline();
+
+        tl.to('.section-1', {
+          x: 0,
+          duration: 1,
+          ease: "power3.inOut",
+          clipPath: "inset(0 0 0 0%)"
+        }, "0.5");  
+
+        tl.from('.section-1 .content', {
+          x: -500,
+          opacity: 0,
+          duration: 1,
+          ease: "power3.inOut",
+          clipPath: "inset(0 0 0 100%)",
+          stagger: 0.5
+        }, "0.9");
+
+        tl.eventCallback("onComplete", () => {
+          document.body.style.overflow = 'auto';
+        });
       });
+
+
+
     </script>
     </body>
 </html>
