--- a/src/pages/apie-mus.html
+++ b/src/pages/apie-mus.html
@@ -285,31 +285,44 @@
 
     <script type="module" src="/src/scripts/navigation.js"></script>
     <script type="module" src="/src/scripts/timeline.js"></script>
-    <script type="module" src="/src/scripts/apie-mus.js"></script>
+    <script type="module" src="/src/scripts/apie-mus-video.js"></script>
       <!-- Loading animation -->
       <script type="module">
         import gsap from "gsap";
         import ScrollTrigger from "gsap/ScrollTrigger";
         gsap.registerPlugin(ScrollTrigger);
-  
-        // Landing
-        document.addEventListener("DOMContentLoaded", function() {
-          gsap.from('.section-1', {
-                x: -300,
-                duration: 1,
-                ease: "power3.inOut",
-                clipPath: "inset(0 0 0 100%)"
-              }, "0.5");  
-  
-            gsap.from('.section-1 .content', {
-                x: -500,
-                opacity: 0,
-                duration: 1,
-                ease: "power3.inOut",
-                clipPath: "inset(0 0 0 100%)",
-                stagger: 0.5
-              }, "0.9");     
+
+        
+        //   Scroll to top after refresh
+        window.onbeforeunload = function () {
+            window.scrollTo(0, 0);
+          }
+
+      document.body.style.overflow = 'hidden';
+
+      document.addEventListener("DOMContentLoaded", function() {
+        const tl = gsap.timeline();
+
+        tl.to('.section-1', {
+          x: 0,
+          duration: 1,
+          ease: "power3.inOut",
+          clipPath: "inset(0 0 0 0%)"
+        }, "0.5");  
+
+        tl.from('.section-1 .content', {
+          x: -500,
+          opacity: 0,
+          duration: 1,
+          ease: "power3.inOut",
+          clipPath: "inset(0 0 0 100%)",
+          stagger: 0.5
+        }, "0.9");
+
+        tl.eventCallback("onComplete", () => {
+          document.body.style.overflow = 'auto';
         });
+      });
       </script>
     </body>
 </html>
