--- a/src/pages/apie-mus.html
+++ b/src/pages/apie-mus.html
@@ -294,35 +294,35 @@
 
         
         //   Scroll to top after refresh
-      //   window.onbeforeunload = function () {
-      //       window.scrollTo(0, 0);
-      //     }
+        window.onbeforeunload = function () {
+            window.scrollTo(0, 0);
+          }
 
-      // document.body.style.overflow = 'hidden';
+      document.body.style.overflow = 'hidden';
 
-      // document.addEventListener("DOMContentLoaded", function() {
-      //   const tl = gsap.timeline();
+      document.addEventListener("DOMContentLoaded", function() {
+        const tl = gsap.timeline();
 
-      //   tl.to('.section-1', {
-      //     x: 0,
-      //     duration: 1,
-      //     ease: "power3.inOut",
-      //     clipPath: "inset(0 0 0 0%)"
-      //   }, "0.5");  
+        tl.to('.section-1', {
+          x: 0,
+          duration: 1,
+          ease: "power3.inOut",
+          clipPath: "inset(0 0 0 0%)"
+        }, "0.5");  
 
-      //   tl.from('.section-1 .content', {
-      //     x: -500,
-      //     opacity: 0,
-      //     duration: 1,
-      //     ease: "power3.inOut",
-      //     clipPath: "inset(0 0 0 100%)",
-      //     stagger: 0.5
-      //   }, "0.9");
+        tl.from('.section-1 .content', {
+          x: -500,
+          opacity: 0,
+          duration: 1,
+          ease: "power3.inOut",
+          clipPath: "inset(0 0 0 100%)",
+          stagger: 0.5
+        }, "0.9");
 
-      //   tl.eventCallback("onComplete", () => {
-      //     document.body.style.overflow = 'auto';
-      //   });
-      // });
+        tl.eventCallback("onComplete", () => {
+          document.body.style.overflow = 'auto';
+        });
+      });
 
 
     // Scroll animations for multiple '.manager' elements inside '.management'
