apie-mus manager animation

--- a/src/pages/apie-mus.html
+++ b/src/pages/apie-mus.html
@@ -330,7 +330,7 @@
         gsap.from(manager, {
           scrollTrigger: {
             trigger: manager,
-            start: 'top 85%',
+            start: 'top bottom+=100',
             end: 'bottom top',
             toggleActions: 'play none none none',
           },
