naujienos ir landing update

--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -201,10 +201,16 @@
           <div class="form-8"></div>
     
           <div class="content">
-            <a href="#">Naujienos</a>
+            <a href="naujienos.html" class="news-category">Naujienos</a>
             <h2>Socialinė „ACME Grupės“ įkūrėjai investavo 100 tūkstančių eurų į Vilniaus universiteto neliečiamojo kapitalo fondą</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui natus amet commodi nam consectetur, labore inventore quaerat non iusto voluptatum quod officia id explicabo, debitis repellat, nemo beatae rerum aliquid.</p>
-            <button>Skaityti</button>
+            <a href="#" class="button-outline">
+              <span>Skaityti</span>
+              <svg class="button-outline-icon" width="51" height="51" viewBox="0 0 51 51" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="25.5" cy="25.5" r="25.5" fill="#004A4E"/>
+                <path d="M35.5 17C35.5 16.1716 34.8284 15.5 34 15.5L20.5 15.5C19.6716 15.5 19 16.1716 19 17C19 17.8284 19.6716 18.5 20.5 18.5H32.5V30.5C32.5 31.3284 33.1716 32 34 32C34.8284 32 35.5 31.3284 35.5 30.5L35.5 17ZM18.0607 35.0607L35.0607 18.0607L32.9393 15.9393L15.9393 32.9393L18.0607 35.0607Z" fill="#E6F5E4"/>
+                </svg>
+            </a>
           </div>
         </section>
     
