--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -204,7 +204,7 @@
             <a href="naujienos.html" class="news-category">Naujienos</a>
             <h2>Socialinė „ACME Grupės“ įkūrėjai investavo 100 tūkstančių eurų į Vilniaus universiteto neliečiamojo kapitalo fondą</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui natus amet commodi nam consectetur, labore inventore quaerat non iusto voluptatum quod officia id explicabo, debitis repellat, nemo beatae rerum aliquid.</p>
-            <a href="#" class="button-outline">
+            <a href="naujienos.html" class="button-outline">
               <span>Skaityti</span>
               <svg class="button-outline-icon" width="51" height="51" viewBox="0 0 51 51" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="25.5" cy="25.5" r="25.5" fill="#004A4E"/>
