--- a/src/pages/naujienos-vidus.html
+++ b/src/pages/naujienos-vidus.html
@@ -84,8 +84,43 @@
                 <span>Grįžti</span>
             </a>
   
-            <h3>Pavadinimas</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, blanditiis. Blanditiis, modi nihil. Eveniet quo repellat placeat autem architecto adipisci eaque illo sequi a totam sit dolores aperiam inventore, odit ab aliquid et voluptas? Vero exercitationem, ipsam perspiciatis facilis modi qui quos quo enim doloribus ut aliquid quae rerum assumenda accusamus similique voluptas animi. Possimus incidunt perspiciatis corporis? Impedit voluptate, quisquam quis eaque deleniti ipsum unde omnis quaerat saepe, id eos modi, aliquid officia iste fugit ea quo laudantium est doloremque voluptatibus. Officia beatae, veniam suscipit vitae dolor unde. Hic, iure eum officiis itaque quaerat ipsam temporibus laudantium expedita quibusdam assumenda quam, magni eius, ipsum consequatur perferendis? Beatae provident iste, pariatur nulla iure laboriosam vero accusamus laborum rem. Nemo repellendus veritatis consectetur, voluptatibus dolore assumenda error, quod corrupti laudantium laboriosam quidem excepturi at nesciunt blanditiis sint voluptates quam ipsam magni recusandae exercitationem, voluptas minima! Quo vero incidunt odit asperiores repellat, molestias aut eum aliquid dolorum ipsam quia neque enim quae amet cupiditate ratione sunt? Impedit aliquid architecto quasi ea possimus quisquam natus rem. Dolorum necessitatibus ut culpa suscipit quas molestias? Vitae itaque ipsam unde eaque debitis cumque, beatae iste voluptatum maxime earum assumenda pariatur, blanditiis, dicta obcaecati fuga tempore quod.</p>
+            <a class="category" href="#">Partneriu interviu</a>
+          
+            <h2 class="title">„ACME Grupė“ plėtodama socialiai atsakingą veiklą įsteigė viešąją įstaigą „ACME Geri darbai“</h2>
+            <p class="intro">„ACME Grupės“ bendrovės drauge su keliais šimtais darbuotojų bei su 6 socialiniais partneriais jau septintus metus iš eilės surengė paramos renginį „Gerų darbų mugė“, kurio metu surinkta per 106 tūkst. Eur. Paaukotos lėšos bus skirtos jautriausioms visuomenės grupėms ir socialinėms problemoms spręsti.
+              „ACME Grupės“ surengto unikalaus renginio „Gerų darbų mugės“ tikslas – gana neįprastu būdu suburti socialinius partnerius ir darbuotojus bendrai socialinės atsakomybės veiklai ir drauge spręsti visuomenės problemas. Prieš šešerius metus ši iniciatyvos idėja pirmą kartą buvo įgyvendinta drauge su organizacija „Happimess“. Šiemet paramos renginys subūrė ne tik šimtus „ACME Grupės“ darbuotojų, jų šeimos narių, bet ir platesnį socialinių partnerių ratą.</p>
+
+            <p>Verslo ir socialinių organizacijų sinergija kiekvienais metais vis didėja. Manome, kad tai geriausias būdas veikti drauge. Vis daugiau tyrimų rodo, kad visuomenė mato verslą kaip pilnavertį visuomenės dalyvį, kuris ne tik kuria darbo vietas, bet ir aktyviai įsitraukia į visuomenės problemų sprendimą, skatina atkreipti dėmesį į socialiai atsakingą veiklą, kelia tvarumo klausimus ir padeda kurti naujus sprendimus“, – teigia „ACME Grupės“ vadovas Sergej Artemiuk.</p>
+
+            <ul>
+              <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
+              <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
+              <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
+              <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
+              <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
+              <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
+            </ul>
+
+            <p>Šiemet prie „Gerų darbų mugės“ prisijungė tokie socialiniai partneriai, kaip Kauno Tvirtovės VII fortas, „Bricks 4 Kids”, „Lituanica X“, „Happimess“, Mažoji medicinos mokykla, Generolo Plechavičiaus kadetų licėjus.</p>
+
+            <p>Anot S. Artemiuk, susitikdami su socialiniais partneriais „ACME Grupės“ darbuotojai gali iš pirmų lūpų sužinoti skirtingų visuomenės grupių sutinkamus iššūkius, problemas bei galimus sprendimo būdus. Renginio metu tiek socialiniai partneriai, tiek grupės darbuotojai organizuoja įvairias įtraukiančias veiklas, kaip maisto gaminimas, nenaudojamų žaislų, knygų, žaidimų, naujos nenaudojamos technikos ir kitų daiktų mugė, aukcionas, protmūšiai, išmanios socialinių partnerių laboratorijos ir žaidimų erdvės.
+              Aktyviai renginyje dalyvaujantys darbuotojai su šeimos nariais ne tik pramogauja, bet ir aukoja pinigus už pasirinktas veiklas. Šventinio vakaro pabaigoje darbuotojų paaukotą sumą „ACME Grupės“ akcininkai padaugina iš dešimties. Gauta paramos suma tampa tų metų socialinės atsakomybės veikloms įgyvendinti skirtu fondu, kurį administruoja specialiai socialinės atsakomybės iniciatyvoms plėtoti sukurta „ACME Grupės“ viešoji įstaiga „ACME Geri darbai“.</p>
+
+            <p>
+              „Šioje organizacijoje grupės bendrovių darbuotojai savanoriškai įsitraukia į nepelno siekiančias iniciatyvas, jas koordinuoja, bendradarbiauja su socialiniais partneriais. Pasitikėjimas ir suteikta atsakomybė yra mūsų vienos pagrindinių veiklos vertybių, kurias demonstruojame konkrečiais veiksmais ir organizaciniais procesais. Šiemet surinkta paramos suma buvo rekordinė, ji viršijo pernai metų renginio metu paaukotą sumą, siekusią 94 tūkst. Eur. Kiekvienų metų vis didesnis kolegų įsitraukimas ir dalyvavimas rodo, kad jiems rūpi socialinė atsakomybė ir jie tiki tokiu veikimo principu“, – teigia „ACME Grupės“ vadovas.</p>
+
+            <h3 class="subtitle">Didžiausias dėmesys – Ukrainai ir jos gyventojams</h3>
+            <p>Per praėjusius metus viešoji įstaiga „ACME Geri darbai“ skyrė 94 tūkst. Eur paramos 24 Lietuvos organizacijoms, dar mažiausiai tiek pat paramos atskiromis iniciatyvomis skyrė „ACME Grupės“ bendrovės.</p>
+
+            <p>„ACME Grupės Gerų darbų“ komandos vadovės teigimu, įmonės socialinės atsakomybės veikla plėtojama trimis kryptimis. Viena iš šių krypčių – sveikata ir sveika gyvensena.
+              „Mes siekiame skatinti sveiką gyvenseną, aktyvų judėjimą ir stiprinti visų amžiaus grupių gyvenimo kokybę. Manome, kad asmuo, norintis padėti kitiems, pirmiausiai pats turi puikiai jaustis, todėl pradedame tai daryti pirmiausia nuo savęs – bendrovių grupių viduje turime aktyvų laisvalaikį įkvepiančią iniciatyvą „ACME Cup“. Šias idėjas bandome perkelti ir už organizacijos ribų, taip paskatindami jų plėtojimą tarp įvairių socialinių grupių žmonių“, – sako A. Valaitė.</p>
+
+            <p>Antroji „ACME Grupės“ socialinės atsakomybės kryptis – technologinis švietimas. Įgyvendinant veiklas šioje srityje siekiama skatinti kokybišką švietimą, vertybių ugdymą ir galimybę mokytis visą gyvenimą. Trečioji kryptis – bendruomenei aktualios iniciatyvos, kurių tikslas yra skatinti komandos narius atkreipti dėmesį į aplink matomas visuomenės problemas, apie jas pranešti, kalbėtis ir ieškoti drauge sprendimo būdų.
+            </p>
+
+            <p>„Tikime, kad socialinė atsakomybė prasideda nuo kiekvieno mūsų komandos nario dėmesingumo aplinkai. Visada skatiname komandos narius pastebėti aplinkinius bei drauge spręsti akivaizdžius iššūkius“, – teigia A. Valaitė.</p>
+
+            <p>„ACME Grupę“ sudaro 37 bendrovės, veikiančios Lietuvoje, Latvijoje ir Estijoje, tarp kurių žinomiausios technologinių įrenginių didmenine distribucija užsiimanti „ACC Distribution“, „AVAD Baltic“, kino filmus platinanti „ACME Film“, tvarios energetikos bendrovė „ACME Solar Group“, nekilnojamo turto administravimo ir priežiūros bendrovė „ACME NT“, „Drąseikių karjeras“, įrenginių priežiūra ir remontu užsiimanti „Servisa ICT“, vidinis kompetencijų centras „ACME Valda“. „ACME Grupės“ bendrovėse Baltijos šalyse dirba per 430 darbuotojų.</p>
           </div>
        
         </section>
